# CODE-AI

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
backend/: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  config.yaml  docker-entrypoint.sh  pyproject.toml
backend/api/: github_scanner.py  server.py
backend/api/cli/: main.py
backend/docs/: LOCAL_LLM_SETUP.md  architecture.md  improvements.md  sse-events.md
backend/docs/archive/: plan_0.md
backend/pipeline/config/: loader.py
backend/pipeline/llm/: anthropic_client.py  context.py  json_parsing.py  ollama_client.py  openai_client.py  openrouter_client.py  retry.py  schemas.py
backend/pipeline/observability/: logging.py
backend/pipeline/reporting/: json_writer.py  pdf_writer.py
backend/pipeline/stages/: __init__.py  preprocessing.py  rag_analyzer.py  recommender.py  risk_analyzer.py  validator.py  verify.py
backend/pipeline/storage/: __init__.py  file.py  store.py
backend/scripts/: setup.sh  start.sh
backend/tests/fixtures/: sample_code.py  sample_desc.txt  testcases.xlsx
backend/tests/integration/: evaluator.py  simulate_pipeline.py
backend/tests/tools/: judge.py
backend/tools/: download_model.py  generate_change_report.py
backend/vscode-extension/: README.md  code-ai-cve-detector-0.1.0.vsix  code-ai-cve-detector-0.2.0.vsix  package-lock.json  package.json  tsconfig.json
backend/vscode-extension/src/: extension.ts
frontend/: .gitignore  Dockerfile  Makefile  package-lock.json  package.json
frontend/src/app/: error.tsx  globals.css  layout.tsx  page.tsx
frontend/src/components/analysis/: analysis-panel.tsx  event-feed-item.tsx  event-feed.tsx  function-list.tsx  stage-progress.tsx
frontend/src/components/editor/: code-editor.tsx  file-drop-zone.tsx
frontend/src/components/github/: repo-panel.tsx
frontend/src/components/layout/: backend-selector.tsx  ide-layout.tsx  model-selector.tsx  status-bar.tsx  (+1 more)
frontend/src/hooks/: use-health-check.ts  use-repo-scan.ts  use-sse.ts
frontend/src/lib/: api.ts  constants.ts  sse-parser.ts
frontend/src/stores/: analysis-store.ts  backend-store.ts  editor-store.ts  model-store.ts  repo-store.ts
frontend/src/types/: api.ts  events.ts  report.ts
logs/: 2026-06-22.md  2026-06-26.md
scripts/: start.sh
(+21 files in other folders)
